ScavengerHunt: Spacing on entry form (BugId: 3345)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@34343 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/ScavengerHunt/css/scavenger-game.scss
+++ b/extensions/wikia/ScavengerHunt/css/scavenger-game.scss
@@ -75,5 +75,11 @@
 				border-color: $color-links;
 			}
 		}
+		&>textarea {
+			height: 60px;
+		}
+		&>input {
+			height: 22px;
+		}
 	}
 }
